# churn-ml-pipeline

./: .env.example  .gitignore  pyproject.toml
docker/: Dockerfile.api  docker-compose.yml
monitoring/: dashboard.py
notebooks/: 01_eda.ipynb
scripts/: _build_eda_notebook.py  prepare_data.py  simulate_drift.py
src/api/: main.py  model_loader.py  schemas.py
src/drift/: alerts.py  detectors.py  monitor.py
src/pipeline/: evaluate.py  preprocess.py  train.py
src/utils/: config.py  logging.py
tests/: test_api.py  test_drift.py  test_pipeline.py
