[project]
name = "churn-ml-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "mlflow>=2.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "pandas>=2.2",
    "scipy>=1.13",
    "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "ipykernel>=7.3.0",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "seaborn>=0.13.2",
]

[project.scripts]
train = "src.pipeline.train:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
